--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ rvm:
   - jruby-18mode
   - jruby-19mode
 
+gemfile:
+  - Gemfile
+  - gemfiles/rails3_0.gemfile
+  - gemfiles/rails3_1.gemfile
+
 before_install:
   - gem install bundler
 
