Allow failures on travis for ruby-head, jruby-18, and jruby-19

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,12 @@ gemfile:
   - gemfiles/rails3_0.gemfile
   - gemfiles/rails3_1.gemfile
 
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-18mode
+    - rvm: jruby-19mode
+
 before_install:
   - gem install bundler
 
